@startuml SpawnEnemyState

[*] --> Idle

Idle -down-> Move : 警戒
Idle -left-> Attack : 攻撃範囲
Idle -right-> Damaged : 被攻撃

Move -down-> Attack : 攻撃範囲
Move -up-> Idle : 警戒外
Move -down-> Damaged : 被攻撃

Attack -left-> Idle : 警戒外
Attack -up-> Move : 警戒内
Attack -down-> Damaged : 被攻撃

Damaged -left-> Idle : 警戒外
Damaged -up-> Move : 警戒内
Damaged -down-> Die : 死亡

@enduml
